<resources>
    <string name="app_name">VideoToPhotoClone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SelectedVideo">Selected Video</string>
    <string name="Gallery">Gallery</string>
    <string name="SlideshowMaker">Slideshow Maker</string>
    <string name="Settings">Settings</string>
    <string name="Share">Share</string>
    <string name="RateUs">Rate Us</string>
    <string name="AboutUs">About Us</string>
    <string name="Author">Author</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Email">Email</string>
    <string name="ClearAll">Clear All</string>
    <string name="Videos">Videos</string>
    <string name="Images">Images</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="Rename">Rename</string>
    <string name="Option">Option</string>
    <string name="Open">Open</string>
    <string name="Delete">Delete</string>
    <string name="Details">Details</string>
    <string name="Cut">Cut</string>
    <string name="Text">Text</string>
    <string name="Sticker">Sticker</string>
    <string name="paint">Paint</string>
    <string name="ShowVideo">Show Video</string>
    <string name="FileFormat">File Format</string>
    <string name="Quality">Quality</string>
    <string name="Size">Size</string>
    <string name="Best">Best</string>
    <string name="VeryHigh">Very High</string>
    <string name="High">High</string>
    <string name="Medium">Medium</string>
    <string name="Low">Low</string>
    <string name="Edit">Edit</string>
    <string name="QuickCapture">Quick Capture</string>
    <string name="TimeCapture">Time Capture</string>
    <string name="Create">Create</string>
    <string name="EnterDuration">Enter duration</string>
    <string name="SecImage">Sec/Image</string>
    <string name="AddImage">Add Image</string>
    <string name="SlideSec">Slide/Sec </string>
    <string name="Music">Music</string>
    <string name="EnterTime">Enter time(In seconds)</string>
    <string name="FileName">File Name</string>
    <string name="FileSize">File Size</string>
    <string name="Path">Path</string>
    <string name="EditPhoto">Edit Photo</string>
    <string name="CreateVideo">Create Video</string>
    <string name="MusicList">Music list</string>
    <string name="VideoToPhoto">Video to photo</string>
    <string name="DeleteQuestion">Are you sure to delete this image?</string>
    <string name="SaveSuccess">Saved!</string>
    <string name="SaveFailure">Save failure!</string>
    <string name="CropImage">Crop Image</string>
    <string name="SnapEvery">Snap every</string>
    <string name="Sec">Second</string>
    <string name="SnapError">Please input time snap less than duration of video!</string>
    <string name="Error">Error!</string>
    <string name="NullTimeSnap">You cant set null time snap!</string>
    <string name="Resolution">Resolution</string>
</resources>
