<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="72dp">
        <RadioButton
            android:id="@+id/rdBest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/Best"
            />
        <RadioButton
            android:id="@+id/rdVrHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/VeryHigh"
            android:textSize="24dp"
            />

        <RadioButton
            android:textSize="24dp"
            android:id="@+id/rdHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/High" />
        <RadioButton
            android:textSize="24dp"
            android:id="@+id/rdMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Medium" />
        <RadioButton
            android:textSize="24dp"
            android:id="@+id/rdLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Low" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>