<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.videotophotoclone.View.MainFragment"
        android:label="Video to Photo"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_selectedFragment"
            app:destination="@id/selectedFragment" />
        <action
            android:id="@+id/action_mainFragment_to_slideshowMakerFragment"
            app:destination="@id/slideshowMakerFragment" />
        <action
            android:id="@+id/action_mainFragment_to_galleryFragment"
            app:destination="@id/galleryFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectedFragment"
        android:name="com.example.videotophotoclone.View.SelectedFragment"
        android:label="@string/SelectedVideo"
        tools:layout="@layout/fragment_selected" >
        <action
            android:id="@+id/action_selectedFragment_to_selectedVideoFragment"
            app:destination="@id/selectedVideoFragment" />
    </fragment>
    <fragment
        android:id="@+id/slideshowMakerFragment"
        android:name="com.example.videotophotoclone.View.SlideshowMakerFragment"
        android:label="@string/SlideshowMaker"
        tools:layout="@layout/fragment_slideshow_maker" >
        <action
            android:id="@+id/action_slideshowMakerFragment_to_createVideo"
            app:destination="@id/createVideo" />
    </fragment>
    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.example.videotophotoclone.View.GalleryFragment"
        android:label="@string/Gallery"
        tools:layout="@layout/fragment_gallery" >
        <argument
            android:name="videoPath"
            app:argType="string"
            android:defaultValue="null"
            />
        <action
            android:id="@+id/action_galleryFragment_to_showVideo"
            app:destination="@id/showVideo" />
        <action
            android:id="@+id/action_galleryFragment_to_editPhotoFragment2"
            app:destination="@id/editPhotoFragment2" />
    </fragment>

    <fragment
        android:id="@+id/editPhotoFragment2"
        android:name="com.example.videotophotoclone.View.EditPhotoFragment"
        android:label="@string/EditPhoto" >
        <action
            android:id="@+id/action_editPhotoFragment2_to_imageListFragment"
            app:destination="@id/imageListFragment" />
    </fragment>
    <fragment
        android:id="@+id/showVideo"
        android:name="com.example.videotophotoclone.View.ShowVideo"
        android:label="@string/ShowVideo"
        tools:layout="@layout/fragment_show_video" />
    <fragment
        android:id="@+id/videoEditFragment"
        android:name="com.example.videotophotoclone.View.VideoEditFragment"
        android:label="fragment_video_edit"
        tools:layout="@layout/fragment_video_edit" />
    <fragment
        android:id="@+id/selectedVideoFragment"
        android:name="com.example.videotophotoclone.View.SelectedVideoFragment"
        android:label="@string/SelectedVideo"
        tools:layout="@layout/fragment_selected_video" >
        <action
            android:id="@+id/action_selectedVideoFragment_to_tabVideoFragment"
            app:destination="@id/tabVideoFragment" />
    </fragment>
    <fragment
        android:id="@+id/imageListFragment"
        android:name="com.example.videotophotoclone.View.ImageListFragment"
        android:label="fragment_image_list"
        tools:layout="@layout/fragment_image_list" >
        <action
            android:id="@+id/action_imageListFragment_to_editPhotoFragment2"
            app:destination="@id/editPhotoFragment2" />
    </fragment>
    <fragment
        android:id="@+id/timeCaptureVideo"
        android:name="com.example.videotophotoclone.View.TimeCaptureVideo"
        android:label="fragment_time_capture_video"
        tools:layout="@layout/fragment_time_capture_video" />
    <fragment
        android:id="@+id/tabVideoFragment"
        android:name="com.example.videotophotoclone.View.TabVideoFragment"
        android:label="@string/VideoToPhoto"
        tools:layout="@layout/fragment_tab_video" >
        <action
            android:id="@+id/action_tabVideoFragment_to_imageListFragment"
            app:destination="@id/imageListFragment" />
        <action
            android:id="@+id/action_tabVideoFragment_to_galleryFragment"
            app:destination="@id/galleryFragment" />
    </fragment>
    <fragment
        android:id="@+id/createVideo"
        android:name="com.example.videotophotoclone.View.CreateVideo"
        android:label="@string/CreateVideo"
        tools:layout="@layout/fragment_create_video" >
        <action
            android:id="@+id/action_createVideo_to_musicList"
            app:destination="@id/musicList" />
        <action
            android:id="@+id/action_createVideo_to_slideshowMakerFragment"
            app:destination="@id/slideshowMakerFragment" />
    </fragment>
    <fragment
        android:id="@+id/musicList"
        android:name="com.example.videotophotoclone.View.MusicList"
        android:label="@string/MusicList"
        tools:layout="@layout/fragment_music_list" >
        <action
            android:id="@+id/action_musicList_to_createVideo"
            app:destination="@id/createVideo" />
    </fragment>
</navigation>