<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/fileFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FileFormat"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btnFileFormat"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:text="JPG"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/fileFormat"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quality"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@+id/fileFormat"
        app:layout_constraintTop_toBottomOf="@+id/fileFormat"
        />
    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnQuality"
        android:text="@string/High"
        android:textSize="24dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/btnFileFormat"
        app:layout_constraintRight_toRightOf="@+id/btnFileFormat"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Size"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@+id/quality"
        app:layout_constraintTop_toBottomOf="@+id/quality"
        />
    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSize"
        android:text="1x"
        android:textSize="24dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/btnQuality"
        app:layout_constraintRight_toRightOf="@+id/btnQuality"
        />

</androidx.constraintlayout.widget.ConstraintLayout>