<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorForest">

    <ImageView
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_marginTop="35dp"
        android:id="@+id/image"
        android:src="@drawable/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Author"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/btnAuthor"
        android:text="HDP Solution"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/btnAuthor"
        android:layout_marginTop="20dp"
        android:id="@+id/privacy"
        android:text="@string/PrivacyPolicy"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/btnPrivacy"
        android:text="http://hdpsolution.com/privacy_policy/CameraApps/PrivacyPolicyCameraApps.htm"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/privacy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/btnPrivacy"
        android:layout_marginTop="20dp"
        android:id="@+id/email"
        android:text="@string/Email"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/btnEmail"
        android:text="support@hdpsolutions.com"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:text="OK"
        android:textSize="12dp"
        android:gravity="center"
        android:id="@+id/btnOk"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btnEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>