<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.EditPhotoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        >
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/bottomNav"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:id="@+id/btnSlVideo"
                        android:src="@drawable/ic_personal_video_black_75dp"
                        android:background="#00FFFFFF"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:text="@string/SelectedVideo"
                        android:textColor="#000"
                        android:textSize="28dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:id="@+id/btnGallery"
                        android:src="@drawable/ic_picture_in_picture_black_75dp"
                        android:background="#00FFFFFF"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:text="@string/Gallery"
                        android:textColor="#000"
                        android:textSize="28dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:id="@+id/btnSlshow"
                    android:src="@drawable/ic_slideshow_black_24dp"
                    android:background="#00FFFFFF"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:text="@string/SlideshowMaker"
                    android:textColor="#000"
                    android:textSize="28dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:id="@+id/btnSetting"
                    android:src="@drawable/ic_settings_black_24dp"
                    android:background="#00FFFFFF"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:text="@string/Settings"
                    android:textColor="#000"
                    android:textSize="28dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        </LinearLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/bottomNav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/item_botom_navigation"
            android:background="@color/colorAccent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>